--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
+    "@uppy/core": "^4.2.3",
+    "@uppy/dashboard": "^4.1.2",
     "@uppy/react": "^4.0.0",
+    "@uppy/xhr-upload": "^4.2.2",
+    "axios": "^1.7.7",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "sweetalert2": "^11.14.2",
+    "react-image-crop": "^11.0.7",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "sweetalert2": "^11.14.5",
     "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
